# Game_Engine

./: ._CMakeLists.txt  .gitignore  CMakeLists.txt  MakeDocumentation.py  README.md
.github/workflows/: cmake.yml
Source/: CMakeLists.txt  Notes.txt  main.cpp
Source/Assets/Shaders/: fragment.glsl  vertex.glsl
Source/ClassTable/: CMakeLists.txt  Notes.txt
Source/ClassTable/Private/: classtable.cpp  engineclass.cpp  iengineclass.cpp
Source/ClassTable/Public/: classtable.h
Source/ClassTable/Public/ClassTable/: classtable.h  engineclass.h  iengineclass.h  macros.h
Source/ClassTable/Test/: main.cpp
Source/Components/: ._Notes.txt  CMakeLists.txt  Notes.txt  main_TEST.cpp
Source/Components/Private/: componentarray.cpp
Source/Components/Public/: common.h  component.h  macros.h
Source/Components/Public/Components/: OLD_macros.h  common.h  component.h  componentarray.h  componentmanager.h  components.h  enginecomponent.h  macros.h  position.h  velocity.h
Source/Coordinator/: CMakeLists.txt  Notes.txt
Source/Coordinator/Private/: coordinator.cpp
Source/Coordinator/Public/: coordinator.h
Source/Coordinator/Public/Coordinator/: coordinator.h
Source/Engine/: CMakeLists.txt
Source/Engine/Private/: engine.cpp  engineclass.cpp
Source/Engine/Public/Engine/: engine.h  engineclass.h
Source/Entities/: CMakeLists.txt  NOTES_TEMPLATE.txt
Source/Entities/Private/: entitymanager.cpp
Source/Entities/Public/Entities/: engineentity.h  entity.h  entitymanager.h  entityregistry.h  macros.h
Source/GameObject/: CMakeLists.txt  Notes.txt
Source/GameObject/Private/: gameobject.cpp  gameobjectmanager.cpp
Source/GameObject/Public/GameObject/: gameobject.h  gameobjectmanager.h
Source/Graphics/: CMakeLists.txt
Source/Graphics/Private/: graphics.cpp
Source/Graphics/Public/Graphics/: graphics.h
Source/Math/: CMakeLists.txt
Source/Math/Private/: vec.cpp
Source/Math/Public/Math/: quat.h  vec.h
Source/Networking/: CMakeLists.txt
Source/Networking/Public/: ._SimpleClient.cpp  net_server.h
Source/Objects/: CMakeLists.txt  Notes.txt
Source/Objects/Private/: objectloader.cpp
Source/OpenGL/: CMakeLists.txt
Source/OpenGL/Private/: graphics.cpp
Source/OpenGL/Public/OpenGL/: graphics.h
Source/SendTable/Public/: sendtable.h
Source/Snapshot/: Notes.txt
Source/StateSync/: Notes.txt
Source/Systems/: CMakeLists.txt
Source/Systems/Private/: system.cpp  systemmanager.cpp
Source/Systems/Public/: systemmanager.h
Source/Systems/Public/Systems/: enginesystem.h  macros.h  system.h  systemmanager.h
Source/TEMPLATE_FILES/: NOTES_TEMPLATE.txt
Source/Utils/: CMakeLists.txt
Source/Utils/Private/: objectloader.cpp
Source/Utils/Public/Utils/: objectloader.h
Test/: CMakeLists.txt  test_classtable.cpp  test_components.cpp  test_engine.cpp  test_engineclass.cpp  test_entities.cpp  test_gameobject.cpp  test_math.cpp  test_objects.cpp  test_systems.cpp  test_utils.cpp
Test/testing/: macros.h
