project(Source)

#add_subdirectory(*/) # Could do an add_subdirectory for all directories in source
add_subdirectory(3rdparty)
add_subdirectory(Components)
add_subdirectory(ClassTable)
add_subdirectory(Coordinator)
add_subdirectory(Entities)
add_subdirectory(Networking)
add_subdirectory(StateSync)
add_subdirectory(Systems)
add_subdirectory(Math)
add_subdirectory(Engine)
add_subdirectory(GameObject)

